--- a/notebooks/Autoencoder Playground.ipynb
+++ b/notebooks/Autoencoder Playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,39 +10,13 @@
     "\n",
     "import torch\n",
     "from torch import nn\n",
-    "import pytorch_lightning as pl"
+    "import pytorch_lightning as pl\n",
+    "from src.b2bnet import OtkaDataModule"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Data\n",
-    "\n",
-    "class RandomDataModule(pl.LightningDataModule):\n",
-    "    def __init__(self, n_segments=1000, n_timesteps=100, n_features=8, batch_size=32):\n",
-    "        super().__init__()\n",
-    "        self.n_segments = n_segments\n",
-    "        self.n_timesteps = n_timesteps\n",
-    "        self.n_features = n_features\n",
-    "        self.batch_size = batch_size\n",
-    "\n",
-    "    def setup(self, stage=None):\n",
-    "        self.train_dataset = torch.randn(self.n_segments, self.n_timesteps, self.n_features)\n",
-    "        self.val_dataset = torch.randn(self.n_segments, self.n_timesteps, self.n_features)\n",
-    "\n",
-    "    def train_dataloader(self):\n",
-    "        return torch.utils.data.DataLoader(self.train_dataset, batch_size=self.batch_size)\n",
-    "\n",
-    "    def val_dataloader(self):\n",
-    "        return torch.utils.data.DataLoader(self.val_dataset, batch_size=self.batch_size)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,6 +30,7 @@
     "\n",
     "        self.encoder = nn.LSTM(n_features, hidden_size, batch_first=True)\n",
     "        self.decoder = nn.LSTM(hidden_size, n_features, batch_first=True)\n",
+    "        self.fc_decoder = nn.Linear(n_features, n_features)\n",
     "\n",
     "    def forward(self, x):\n",
     "        batch_size = x.size(0)\n",
@@ -63,19 +38,20 @@
     "        y_enc, (h_enc, c_enc) = self.encoder(x)\n",
     "        x_enc = torch.rand(batch_size, n_timesteps, self.hidden_size)\n",
     "        y_dec, (h_dec, c_dec) = self.decoder(x_enc, (h_enc, c_enc))\n",
+    "        y_hat = self.fc_decoder(y_dec)\n",
     "        return y_dec\n",
     "\n",
     "    def training_step(self, batch, batch_idx):\n",
-    "        X = batch\n",
-    "        X_reconn = self(X)\n",
-    "        loss = nn.functional.mse_loss(X_reconn, X)\n",
+    "        X, subject_ids, y_b2b, y_cls = batch\n",
+    "        X_recon = self(X)\n",
+    "        loss = nn.functional.mse_loss(X_recon, X)\n",
     "        self.log('train/loss', loss)\n",
     "        return loss\n",
     "\n",
     "    def validation_step(self, batch, batch_idx):\n",
-    "        X = batch\n",
-    "        X_reconn = self(X)\n",
-    "        loss = nn.functional.mse_loss(X_reconn, X)\n",
+    "        X, subject_ids, y_b2b, y_cls = batch\n",
+    "        X_recon = self(X)\n",
+    "        loss = nn.functional.mse_loss(X_recon, X)\n",
     "        self.log('val/loss', loss)\n",
     "        return loss\n",
     "\n",
@@ -85,19 +61,190 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "GPU available: False, used: False\n",
+      "TPU available: False, using: 0 TPU cores\n",
+      "IPU available: False, using: 0 IPUs\n",
+      "HPU available: False, using: 0 HPUs\n",
+      "\n",
+      "  | Name       | Type   | Params\n",
+      "--------------------------------------\n",
+      "0 | encoder    | LSTM   | 28.3 K\n",
+      "1 | decoder    | LSTM   | 28.3 K\n",
+      "2 | fc_decoder | Linear | 3.5 K \n",
+      "--------------------------------------\n",
+      "60.2 K    Trainable params\n",
+      "0         Non-trainable params\n",
+      "60.2 K    Total params\n",
+      "0.241     Total estimated model params size (MB)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c7aa1be215894b31a26521d3050477ec",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Sanity Checking: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/morteza/micromamba/envs/b2bnet/lib/python3.10/site-packages/pytorch_lightning/trainer/connectors/data_connector.py:430: PossibleUserWarning: The dataloader, train_dataloader, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 12 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.\n",
+      "  rank_zero_warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "55f1aff7d9054530b6b1590b43b49624",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d1f2b94e5b3344ff9f1498b50d163574",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "91b1ba904e024fb3a510e6ed167e13de",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "070a11b6cd6049f89bba56debc891fb1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "88a555989bad4ecc9fff730a3d214c06",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6acf3c55fbf540e480927b8b08fa5e7d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3c677cad8251458d9ae1e7317bd1968f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "08a1a53244ad400aaf1d0eb576a80790",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "752852c01f2448b3a177c52d0687d7f8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Experiment\n",
     "\n",
-    "n_segments = 1000\n",
+    "segment_size = 120\n",
+    "batch_size = 32\n",
     "n_timesteps = 120*10  # 10 sec\n",
     "n_features = 59\n",
     "hidden_size = 59\n",
-    "max_epochs = 1000\n",
+    "max_epochs = 100\n",
     "\n",
-    "datamodule = RandomDataModule(n_segments, n_timesteps, n_features)\n",
+    "datamodule = OtkaDataModule(segment_size=segment_size, batch_size=batch_size)\n",
     "\n",
     "model = Autoencoder(n_features=n_features, hidden_size=hidden_size)\n",
     "\n",
