--- a/notebooks/Playground.ipynb
+++ b/notebooks/Playground.ipynb
@@ -26,6 +26,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# Parameters\n",
+    "\n",
+    "segment_size = 120 * 3  # 3sec\n",
+    "batch_size = 256\n",
+    "n_features = 59\n",
+    "hidden_size = 16\n",
+    "max_epochs = 200"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -41,17 +60,15 @@
    "source": [
     "# Experiment\n",
     "\n",
-    "segment_size = 120 * 3  # 3sec\n",
-    "batch_size = 256\n",
-    "n_features = 59\n",
-    "hidden_size = 16\n",
-    "max_epochs = 200\n",
-    "\n",
     "datamodule = OtkaTimeDimSplit(segment_size=segment_size, batch_size=batch_size)\n",
     "\n",
     "model = BidirectionalLSTM(n_features=n_features, hidden_size=hidden_size, n_subjects=51)\n",
     "\n",
-    "trainer = pl.Trainer(max_epochs=max_epochs,accelerator='cpu', log_every_n_steps=1, deterministic='warn')\n",
+    "trainer = pl.Trainer(\n",
+    "    max_epochs=max_epochs,\n",
+    "    accelerator='cpu',\n",
+    "    log_every_n_steps=1,\n",
+    "    deterministic='warn')\n",
     "\n",
     "trainer.fit(model, datamodule=datamodule)"
    ]
